Finalize smart contract tutorial. Fix css details for dark mode

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -98,7 +98,9 @@ p {
 }
 
 strong>code, 
-p>code {
+p>code, 
+li>code 
+{
   color:var(--background-color)!important;
   background-color:var(--text-color)!important;
 }
